2004-08-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fix bug when processing empty location
	tags. Closes bug #63001.

2004-06-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthorizationConfig.cs: really fix bug #60482. Thanks David!

2004-06-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthorizationConfig.cs: we must match [verb +] (role|user). Fixes bug
	#60482.

2004-06-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: allow empty <configSections>.

2004-06-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* GlobalizationConfigurationHandler.cs: if no culture given, use the
	default one, not the invariant.

2004-06-07  Alon Gazit <along@mainsoft.com>

	* HandlerFactoryConfiguration.cs: using cache to get performance
	improvement.
	

2004-06-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCapabilitiesBase.cs: set the useragent of the new
	HttpBrowserCapabilities object.

2004-06-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCapabilitiesBase.cs: ClientTarget takes precedence over UserAgent.

2004-06-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: when the virtual path is not /, don't
	loop forever trying to read configuration from /. Fixes bug #59480.

2004-05-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* GlobalizationConfiguration.cs: if we have no context, use
	GetAppConfig instead of GetConfig.

2004-05-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CompilationConfiguration.cs: a null value is ok for TempDirectory.

2004-05-12  Jaroslaw Kowalski <jaak@zd.com.pl>

	* AuthenticationConfigHandler.cs: fixed slidingExpiration and requireSSL

2004-05-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fixed loading of external files. Closes
	bug #57244.

2004-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: now it defaults to 'web.config' and if