@@ -1,3 +1,7 @@
+2004-10-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* TraceContext.cs: don't cast to Page is the handler it's not a page.
+
 2004-10-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* HttpRequest.cs: CurrentExecutionFilePath is the one that
